# ageBand

./: .env.example  .gitattributes  .gitignore  AgeBand_Demo.ipynb  BUILD_PROMPT.md  Dockerfile  LICENSE  Makefile  README.md  eval_report_demo.json  pyproject.toml  requirements-notebook.txt  requirements.txt
deploy/: .gitignore  README-notebook.md  _build_notebook.py  notebook_bootstrap.ipynb  notebook_run.sh  save_results.sh
docs/: AgeBand_AMD_Demo.pptx  AgeBand_AMD_Pitch.pptx  Architecture.md  DEMO_RUNBOOK.md  ageband_diagrams.drawio  ageband_modular_architecture.drawio  ageband_pitch.md  ageband_solution.md  architecture_diagrams.md  benchmarks_mi300x.md  droplet_demo_setup.md  hackathon_build_log.md  hackathon_improvement_plan.md  integration_architecture.md  model_comparison.md  synthetic_eval.md
docs/deck/: deck_data.json
docs/modules/: ageband_inference.md  audit_fairness.md  contracts.md  enforcement.md  evidence_fabric.md  gate.md  gateway_session.md  orchestration.md  policy_decision.md  roster.md  signal_extraction.md  stepup_verification.md  synthetic_eval.md
helm/ageband/: Chart.yaml  values.yaml
notebooks/: AgeBand_Demo.ipynb
scripts/: benchmark_roster.py  compare_backends.py  discord_md_to_export.py  eval_multilang.py  eval_pipeline_against_synthetic.py  generate_synthetic_chats.py  notebook_server_utils.py  setup_droplet_jupyter.sh
scripts/eval_results/: multilang_20260707T193325Z.json
src/ageband_inference/: __init__.py  ageband_estimator.yaml  confidence.py  config.py  rule_estimator.py  service.py  tool.py
src/audit_fairness/: __init__.py  service.py  trace.py
src/contracts/: __init__.py  embeddings_client.py  llm_client.py  models.py  protocols.py  runtime.py  validators.py
src/enforcement/: __init__.py  posture_map.py  service.py  tool.py
src/evidence_fabric/: __init__.py  corroboration.py  decay.py  service.py  store.py  tools.py
src/gate/: __init__.py  config.py  gate_service.py  tool.py
src/gateway_session/: __init__.py  filter.py  service.py  session_store.py
src/orchestration/: __init__.py  ageband_agent.yaml  amd_check.py  api.py  guardrails.py  planner_supervisor.yaml  runner.py
src/policy_decision/: __init__.py  service.py  table.py  tool.py
src/roster/: __init__.py  discord_ingest.py  sample_export.json
src/signal_extraction/: __init__.py  keyword_extractor.py  language_detect.py  (+6 more)
tests/: conftest.py
(+109 files in other folders)
